# tox-workdir

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml  tox.ini
.github/workflows/: test.yaml
changelog.d/: 20241220_174400_kurtmckee.rst  fragment-template.rst.txt
requirements/: README.rst
requirements/mypy/: requirements.txt
requirements/test/: pyproject.toml  requirements.txt
src/tox_workdir/: __init__.py
tests/: conftest.py  test_plugin.py
